cleanup to match readme

--- a/secretLocation/webhook.env
+++ b/secretLocation/webhook.env
@@ -1,2 +1,2 @@
-AZURACAST_WEBHOOK_KEY=RANDOMIZED-KEY-GOES-HERE
-DISCORD_WEBHOOK_URL=https://YOUR-DISCORD-WEBHOOK-HERE
+AZURACAST_WEBHOOK_KEY=your-secure-key
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your-webhook-url
